# aws-lambda-email-notifier

./: .gitignore  README.md  requirements.txt  serverless.yml  setup.cfg
src/notifier/: notifier.py
src/notifier/emailsender/: builder.py  template.py
src/resources/: body_template.html  subject_template.html
src/resources/mock/: email_body_template_result_ok.html  email_subject_template_result.ok.html  email_tags_test.csv  status_reports_test.csv  wake_up-users.json
src/test/: tests.py
