[metadata]
name = aws-lambda-email-notifier
version = file: VERSION
author = Tiziano Catalano
description = This project represents a python lambda function useful to generate and send an email with password reset link from aws ses to user email
long_description = file: README.md
long_description_content_type = text/x-markdown

[options]
package_dir =
    =src
packages = find:
install_requires = file: requirements.txt
zip_safe = False

[options.packages.find]
where = src